--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -1,6 +1,16 @@
 page{
   height: 100%;
 }
+.background-logo{
+  position: fixed;
+  left: 31.32%;
+  right: -1.19%;
+  top: 10.04%;
+  bottom: 56.15%;
+  opacity: 0.4;
+  width:299px;
+  height:313px;
+}
 .mask {
 
   position: fixed;
@@ -25,7 +35,128 @@ page{
 
   .container-top {
     position: absolute;
-    top: 80rpx;
+    // top: 80rpx;
+    z-index: 999;
+    .player-info{
+      margin-top: 36px;
+      margin-left: 5px;
+      .avatar {
+        width: 40px; height: 40px;
+        border-radius: 50%;
+        border: white solid 2px;
+        overflow: hidden;
+        z-index: -1;
+      }
+      .player-info-container{
+        position: absolute;
+        top: 46px;
+        left: 14px;
+        height: 24px;
+        width: 205px;
+        border-radius: 6px;
+        background-color: rgba(0,0,0,0.3);
+        z-index: -2;
+        color: white;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-left: 34px;
+        text{
+          line-height: 30rpx;
+          font-weight: 400;
+          font-size: 12px;
+          text-align: center;
+        }
+        image{
+          // padding-top: 5px;
+          padding-left: 8px;
+          padding-right: 4px;
+        }
+        .exp-background {
+          margin-right: 5px;
+          margin-left: 5px;
+          position: relative;
+          width: 35%;
+          height: 28rpx;
+          background: rgba(255,255,255,0.44);
+          border-radius: 14rpx;
+          .exp-bar {
+            position: absolute;
+            left: 0; right: 0;
+            top: 0; bottom: 0;
+            background: #FFFFFF;
+            border-radius: 14rpx;
+          }
+        }
+      }
+    }
+  
+    .welcome-shop{
+      display: flex;
+      flex-direction: row;
+      margin-top: 10px;
+      .welcome-info{
+        margin-left: 8vw;
+        .welcome-text{
+          width: 50vw;
+          height: 7.3vw;
+          border-top: solid #BBABCD 2px;
+          border-bottom: solid #BBABCD 2px;
+          // padding: 6px 52px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-weight: 400;
+          font-size: 15px;
+          line-height: 17px;
+          color: #BBABCD;
+        }
+        .logo{
+          margin-top: 15px;
+          height: 13vw;
+        }
+      }
+  
+      .shop-buttons{
+        right: 0;
+        margin-left: 3vw;
+        display: flex;
+        flex-direction: row;
+        overflow: hidden;
+        margin-bottom: 10vh;
+        image{
+          height: 32px;
+          width: 32px;
+          padding-left: 4vw;
+        }
+      }
+    }
+
+    .search-container{
+      margin: 20px 7vw;
+      width: 86vw;
+      height: 10vw;
+      background-color: white;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      position: relative;
+      .search-icon{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        right: 4px;
+        width: 33px;
+        height: 33px;
+        border-radius: 50%;
+        background: #38376D;
+        image{
+          height: 18px;
+        }
+      }
+    }
+
   }
 
   .search {
@@ -49,7 +180,6 @@ page{
       background-color: white;
       border-radius: 32rpx;
       width: 80%;
-
       font-size: 24rpx;
     }
 
@@ -68,43 +198,58 @@ page{
 }
 
 .room-list-content {
+  background: rgba(255, 255, 255, 0.8);
+  mix-blend-mode: normal;
+  // opacity: 0.8;
+  border: 5px solid #38376D;
+  border-radius: 33px;
   position: absolute;
-
-  padding-top: 256rpx;
+  right: -3vw;
+  margin-top: 620rpx;
+  padding-top: 10px;
   padding-bottom: 160rpx;
-  width: 100%;
-  height: fit-content;
-
+  width: 104%;
+  // height: fit-content;
+  height: 420px;
   display: flex;
   flex-direction: row;
   align-items: start;
-  justify-content: start;
+  justify-content: center;
   flex-wrap: wrap;
+  // white-space: nowrap;
+  overflow: scroll;
 
   .room {
-    display: flex;
+    display: inline-block;
+    // display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
-
-    margin: 24rpx 0;
+    width: 39%;
+    margin: 2% 4.5%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: #EBF0F6;
+    mix-blend-mode: normal;
+    border: 4px solid #8D7CB0;
+    border-radius: 8px;
 
     .room-thumbnail {
+      margin-left: 20%;
       width: 60%;
     }
     .room-desc {
       width: 100%;
-
       display: flex;
       flex-direction: column;
       align-items: center;
 
       .room-user-name {
         margin: 16rpx 0;
-
+        font-size: 15px;
         display: flex;
         flex-direction: row;
         align-items: center;
+        color: #A29CA4;
 
         .point {
           width: 20rpx; height: 20rpx;
@@ -126,24 +271,26 @@ page{
       }
 
       .room-level-name {
-        min-width: 60%;
+        min-width: 70%;
         padding: 12rpx 24rpx;
-
         display: flex;
-
         border-radius: 16rpx;
-
         background-color: rgba(0, 0, 0, 0.123);
         color: white;
-
+        font-size: 15px;
         text-align: center;
-
+        background: #816EA8;
+        border-radius: 10px;
         .room-level {
-          width: 15%;
-          margin: 0 8rpx;
+          background: #BA9CC0;
+          width: 21px;
+          height: 20px;
+          border-radius: 50%;
+          margin-right: 5px;
+          // margin: 0 8rpx;
         }
         .room-name {
-          width: 85%;
+          width: 80%;
         }
       }
     }
